# ML-Experimentation-Practice

./: .gitignore  config.py  pyproject.toml
experiments/: dummy.yaml
src/: data_ingestion.py  experimentation.py  model_mapper.py  model_train.py  pipeline.py
