[project]
name = "experimentation-focus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "mlflow>=3.10.1",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
